# axum-boilerplate-with-seaorm

./: .env.example  .gitignore  Cargo.toml  README.md  cargo-generate.toml  docker-compose.yaml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  todo.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
server/: Cargo.toml
server/src/: app.rs  config.rs  dto.rs  error.rs  lib.rs  router.rs  server.rs  util.rs
server/src/common/: error.rs  fetch.rs  jwt.rs  state.rs  validated_json.rs  validated_path.rs
server/src/common/error/: api.rs  database.rs  service.rs
server/src/dto/: todo.rs
server/src/dto/todo/: request.rs  response.rs
server/src/error/: api.rs  auth.rs  db.rs
server/src/handler/: todo.rs
server/src/handlers/: todo.rs
server/src/middleware/: auth.rs
server/src/middlewares/: auth.rs
server/src/repositories/: todo.rs
server/src/repository/: todo.rs
server/src/router/: todo.rs
server/src/routes/: todo.rs
server/src/service/: todo.rs
server/src/services/: todo.rs
server/src/state/: app.rs  todo.rs
server/src/todo/: controller.rs  model.rs  repository.rs  router.rs  service.rs
server/src/util/: fetch.rs  jwt.rs  validated_json.rs
server/src/utils/: jwks.rs  jwt.rs  mod.rs  validated_json.rs
server/src/validators/: todo.rs
service/: Cargo.toml
service/src/: app.rs  config.rs  error.rs  lib.rs  router.rs
service/src/database/: postgres.rs
service/src/dto/: todo.rs
service/src/handler/: todo.rs
service/src/repository/: todo.rs
service/src/routes/: todo.rs
src/: config.rs  main.rs
src/database/: manager.rs  mod.rs  postgres.rs
