[package]
name = "boilerplate"
edition = "2021"
version = "0.1.0"

[workspace]
members = [".", "server", "entity", "migration"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
server-example = { path = "server" }
