[package]
name = "server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
axum = { version = "0.7", features = ["tracing", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
sea-schema = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
envy = "0.4.2"
dotenvy = "0.15"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }

entity = { path = "../entity" }

[dev-dependencies]
mockall = "0.13.0"
