[package]
name = "server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "~1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
axum = { version = "0.8.1", features = ["tracing", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
sea-schema = "0.16.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
cached = { version = "0.54.0", features = ["async"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
thiserror = "2.0.9"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
anyhow = "1.0.95"
envy = "0.4.2"
dotenvy = "0.15.7"
async-trait = "0.1.83"
validator = { version = "0.19.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.11", features = ["json"] }
once_cell = "1.20.2"

entity = { path = "../entity" }

[dev-dependencies]
mockall = "0.13.0"
wiremock = "0.6.2"
