[package]
name = "server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
axum = { version = "0.8.4", features = ["tracing", "multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
sea-schema = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
cached = { version = "0.55.0", features = ["async"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
anyhow = "1.0.98"
envy = "0.4.2"
dotenvy = "0.15.7"
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
once_cell = "1.21.3"

entity = { path = "../entity" }

[dev-dependencies]
mockall = "0.13.1"
wiremock = "0.6.4"
